# CudaPractice

./: .gitignore  README.md
CoffeeBeforeArch/: README.md
CoffeeBeforeArch/MatrixMultiplication/: baseline.cu  cache_tiled_MatMul.cu
CoffeeBeforeArch/cuBLAS_VectorAdd/: cublas_add.cu
CoffeeBeforeArch/vectorAdd/baseline/: vectorAdd.cu
CoffeeBeforeArch/vectorAdd/unified_mem/: vectorAdd.cu
Khonsu/: Readme.md
NeuralNetwork/: CMakeLists.txt  Readme.md  download_mnist.py
NeuralNetwork/Linear/: coordinate_dataset.cpp  coordinate_dataset.h  exception.h  matrix.h  shape.hpp
NeuralNetwork/Linear_Layer/: shape.cpp  sigmoid.cu  sigmoid.h
NeuralNetwork/src/: Constants.h  main.cpp
NeuralNetwork/src/Utils/: Utils.cpp  Utils.hpp
NeuralNetwork/src/data/: mnist.cpp  mnist.cu  mnist.hpp
NeuralNetwork/src/logger/: BSlogger.hpp
NeuralNetwork/src/network/: convolution.cpp  convolution.h
NeuralNetwork/test/: Readme.md
NeuralNetwork/test/Linear_Layer/: CMakeLists.txt  coordinate_dataset.h  main.cpp  matrix.cu  nn_layer.h  sigmoid.cu
Official_Samples/: Readme.md  SampleCMakeLists.txt
Official_Samples/0_Introduction/: Reame.md
Official_Samples/0_Introduction/asyncAPI/: asyncAPI.cu
Official_Samples/0_Introduction/c++11_cuda/: CMakeLists.txt  c++11_cuda.cu
Official_Samples/0_Introduction/clock/: CMakeLists.txt
Official_Samples/0_Introduction/cppOverload/: CMakeLists.txt  Readme.md  cppOverload.cu
Official_Samples/0_Introduction/simpleAssert/: CMakeLists.txt  Readme.md  simpleAssert.cu
Official_Samples/0_Introduction/simplePrintf/: CMakeLists.txt  simplePrintf.cu
Official_Samples/0_Introduction/vectorAdd/: CMakeLists.txt
Official_Samples/1_Utilities/bandwidthTest/: CMakeLists.txt  Readme.md  bandwidthTest.cu
Official_Samples/1_Utilities/topologyQuery/: CMakeLists.txt  Readme.md  topologyQuery.cu
OpenCV_algorithm/: Readme.md
OpenCV_algorithm/convert_bgr2gray/: CMakeLists.txt  Readme.md  bgr2gray.cpp  bgr2gray.cu  bgr2gray.cuh  bgr2gray.h  create_fake_image.cpp  create_fake_image.py  main.cpp  utils.cpp  utils.h
OpenCV_algorithm/convert_rgb2gray/: CMakeLists.txt  Readme.md  main.cpp
Professional_C_Cuda/Chapter_1_hetegeneous_parallel_computing_with_cuda/: CMakeLists.txt  hello.cu
Professional_C_Cuda/Chapter_2_cuda_programming_model/: sumArraysOnHost.cu
Sample_cuda_cmake/: CMakeLists.txt
Sample_cuda_cpp/: CMakeLists.txt  Readme.md  main.cpp  matmul_cpu.cpp  matmul_cpu.h  matmul_cpu.hpp  matmul_gpu.cu  matmul_gpu.cuh
Samples/: Readme.md
Samples/0_Introduction/: Reame.md
Samples/0_Introduction/asyncAPI/: CMakeLists.txt  Readme.md
Samples/0_Introduction/c++11_cuda/: Readme.md
Samples/0_Introduction/clock/: CMakeLists.txt
Samples/0_Introduction/vectorAdd/: vectorAdd.cu
Samples/vectorAdd/: CMakeLists.txt  vectorAdd.cu
Tutorial/: Readme.md
Tutorial/Matmul_Template/: Readme.md
Tutorial/Matrix-Matrix-Multiplication/: CMakeLists.txt  Readme.md  device_array.h  kernel.cu  main.cu  matmul_simple.cu
Tutorial/Matrix-Matrix-Multiplication_old/: CMakeLists.txt  matmul.cu
Tutorial/call_cuda_from_cpp/: CMakeLists.txt  main.cpp
Tutorial/function_pointer_cuda/: Readme.md  function_pointer.cu
Tutorial/go_binding/: Readme.md
Tutorial/matmul/: CMakeLists.txt
Tutorial/template_with_cuda/: Readme.md  main.cpp  template_add.cu  template_add.cuh
basic_algorithms/clustering/: Readme.md
basic_algorithms/vectorAdd/: vectorAdd.cu
dockers/: dev.Dockerfile  nsight-compute.Dockerfile
programming_massively_parallel_processors/: Readme.md
programming_massively_parallel_processors/Chapter 3/: CMakeLists.txt  Readme.md  simpleMatrixMultiplication.cu  simpleVectorAdd.cu
samples/call_cuda_from_cpp/: Readme.md  add_function.cpp  add_function.h  add_kernel.cu  add_kernel.cuh
samples/matmul/: CMakeLists.txt  main.cpp  matmul.cu  matmul.cuh
samples/python_binding/: Readme.md
samples/template_with_cuda/: main.cpp  template_add.cu  template_add.cuh
